--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+aa-exp
 node_modules
 dist
 dist-ssr
@@ -23,4 +24,3 @@ dist-ssr
 *.sln
 *.sw?
 
-!exp
